[package]
name = "o2"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/chrisstpierre/O2"
readme = "README.md"
authors = ["Chris St. Pierre"]
categories = ["web-programming", "command-line-utilities"]  
description = "A command-line tool for managing and deploying web applications."
license = "MIT"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env", "unicode", "wrap_help", "string", "cargo"] }
